--- a/package.json
+++ b/package.json
@@ -9,17 +9,29 @@
     "lint": "next lint --fix",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "prepare": "husky",
-    "test": "vitest"
+    "test": "vitest",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
     "next": "15.2.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "styled-jsx": "^5.1.6"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "3.2.5",
     "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^19.7.1",
     "@eslint/eslintrc": "^3",
+    "@storybook/addon-essentials": "8.6.3",
+    "@storybook/addon-onboarding": "8.6.3",
+    "@storybook/blocks": "8.6.3",
+    "@storybook/experimental-addon-test": "8.6.3",
+    "@storybook/experimental-nextjs-vite": "8.6.3",
+    "@storybook/react": "8.6.3",
+    "@storybook/test": "8.6.3",
     "@tailwindcss/postcss": "^4",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
@@ -27,17 +39,29 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/browser": "3.0.7",
+    "@vitest/coverage-v8": "3.0.7",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-storybook": "^0.11.3",
     "husky": "^9.1.7",
     "jsdom": "^26.0.0",
     "lint-staged": "^15.4.3",
+    "playwright": "^1.50.1",
+    "postcss-import": "^16.1.0",
+    "postcss-nesting": "^13.0.1",
     "prettier": "^3.5.2",
+    "storybook": "8.6.3",
     "tailwindcss": "^4",
     "typescript": "^5",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.0.7"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
