--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint --fix",
@@ -14,10 +14,15 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@sentry/nextjs": "9",
     "autoprefixer": "^10.4.20",
+    "i18next": "^24.2.2",
+    "i18next-browser-languagedetector": "^8.0.4",
+    "i18next-resources-to-backend": "^1.2.1",
     "next": "15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.1",
     "styled-jsx": "^5.1.6"
   },
   "devDependencies": {
@@ -30,6 +35,7 @@
     "@storybook/blocks": "8.6.3",
     "@storybook/experimental-addon-test": "8.6.3",
     "@storybook/experimental-nextjs-vite": "8.6.3",
+    "@storybook/nextjs": "^8.6.3",
     "@storybook/react": "8.6.3",
     "@storybook/test": "8.6.3",
     "@tailwindcss/postcss": "^4",
@@ -55,7 +61,7 @@
     "prettier": "^3.5.2",
     "storybook": "8.6.3",
     "tailwindcss": "^4",
-    "typescript": "^5",
+    "typescript": "^5.7.3",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.0.7"
   },
