--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "prepare": "husky",
     "test": "vitest",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@sentry/nextjs": "9",
@@ -19,6 +20,7 @@
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.4",
     "i18next-resources-to-backend": "^1.2.1",
+    "lucide-react": "^0.477.0",
     "next": "15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -47,6 +49,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/browser": "3.0.7",
     "@vitest/coverage-v8": "3.0.7",
+    "cypress": "^14.1.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
     "eslint-config-prettier": "^10.0.2",
@@ -68,6 +71,14 @@
   "eslintConfig": {
     "extends": [
       "plugin:storybook/recommended"
+    ]
+  },
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "cypress"
+    ],
+    "onlyBuiltDependencies": [
+      "cypress"
     ]
   }
 }
